refactoring the counterstring creation to make the algorithm more obvious and support easier conversion to JS
Hopefully this will simplify the code too.